--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/redonearth/instaclone-backend#readme",
   "dependencies": {
+    "@prisma/client": "^2.16.1",
     "apollo-server": "^2.20.0",
     "graphql": "^15.5.0"
   },
