--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "",
   "scripts": {
     "dev": "nodemon --exec babel-node server.js",
-    "migrate": "npx prisma migrate dev --preview-feature"
+    "migrate": "npx prisma migrate dev --preview-feature",
+    "studio": "npx prisma studio"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,7 @@
   },
   "homepage": "https://github.com/redonearth/instaclone-backend#readme",
   "dependencies": {
-    "@prisma/client": "^2.16.1",
+    "@prisma/client": "^2.21.2",
     "apollo-server": "^2.20.0",
     "graphql": "^15.5.0"
   },
@@ -28,6 +29,6 @@
     "@babel/node": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "nodemon": "^2.0.7",
-    "prisma": "^2.16.1"
+    "prisma": "^2.21.2"
   }
 }
