--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/node": "^7.12.13",
     "@babel/preset-env": "^7.12.13",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.2",
     "prisma": "^2.21.2"
   },
   "resolutions": {
