--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-env": "^7.12.13",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.2",
+    "prettier-plugin-prisma": "^0.13.2",
     "prisma": "^2.21.2"
   },
   "resolutions": {
