--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "preinstall": "npx npm-force-resolutions",
-    "dev": "nodemon --exec babel-node server.js --delay 2",
+    "dev": "nodemon --exec ts-node src/server --ext ts,js --delay 2",
     "migrate": "npx prisma migrate dev --preview-feature",
     "studio": "npx prisma studio"
   },
@@ -21,14 +21,16 @@
   },
   "homepage": "https://github.com/redonearth/instaclone-backend#readme",
   "dependencies": {
+    "@graphql-tools/load-files": "^6.6.0",
+    "@graphql-tools/merge": "^8.3.0",
     "@prisma/client": "^2.30.3",
-    "apollo-server": "^2.25.4",
-    "apollo-server-express": "^2.25.4",
+    "apollo-server": "^3.9.0",
+    "apollo-server-express": "^3.9.0",
     "bcrypt": "^5.0.1",
-    "dotenv": "^9.0.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "graphql": "^15.5.0",
-    "graphql-tools": "^7.0.5",
+    "graphql": "^16.5.0",
+    "graphql-upload": "^15.0.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   },
@@ -36,13 +38,18 @@
     "@babel/core": "^7.18.6",
     "@babel/node": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "@types/bcrypt": "^5.0.0",
+    "@types/graphql-upload": "^8.0.11",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
-    "prettier-plugin-prisma": "^0.13.2",
-    "prisma": "^2.30.3"
+    "prettier-plugin-prisma": "^4.1.0",
+    "prisma": "^2.30.3",
+    "ts-node": "^10.8.2",
+    "typescript": "^4.7.4"
   },
   "resolutions": {
-    "fs-capacitor": "^6.2.0",
-    "graphql-upload": "^12.0.0"
+    "fs-capacitor": "^6.2.0"
   }
 }
