웹소켓 설정 추가, 구독 기능 구현

--- a/package.json
+++ b/package.json
@@ -23,17 +23,22 @@
   "dependencies": {
     "@graphql-tools/load-files": "^6.6.0",
     "@graphql-tools/merge": "^8.3.0",
+    "@graphql-tools/schema": "^8.5.0",
     "@prisma/client": "^2.30.3",
     "apollo-server": "^3.9.0",
+    "apollo-server-core": "^3.10.0",
     "apollo-server-express": "^3.9.0",
     "aws-sdk": "^2.1173.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^15.0.2",
+    "graphql-ws": "^5.9.1",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ws": "^8.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.6",
@@ -43,6 +48,7 @@
     "@types/graphql-upload": "^8.0.11",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
+    "@types/ws": "^8.5.3",
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "prettier-plugin-prisma": "^4.1.0",
