--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "graphql": "^16.5.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^15.0.2",
-    "graphql-ws": "^5.9.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "subscriptions-transport-ws": "^0.11.0",
     "ws": "^8.8.1"
   },
   "devDependencies": {
